adult/logs/create_fluctuations_15091918_552.out
SLURM_JOBID:  15092473
SLURM_ARRAY_TASK_ID:  552
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 3, 0.0005, 10)


